[gd_scene load_steps=5 format=3 uid="uid://c3livqvnicrbc"]

[ext_resource type="Script" path="res://ui/menus/layouts/new_game_menu.gd" id="1_6cyfu"]
[ext_resource type="Texture2D" uid="uid://bthuqawx083kb" path="res://assets/geometry/arrows/triangle-arrow.png" id="2_a66yr"]
[ext_resource type="PackedScene" uid="uid://qveyavci77o0" path="res://ui/menus/layouts/components/new_game_slot.tscn" id="2_k2tpt"]
[ext_resource type="Texture2D" uid="uid://c5f4ajjb1l1r5" path="res://assets/geometry/shapes/circles/circunference.png" id="4_1xuuy"]

[node name="NewGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6cyfu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="EnterSaveNameDialog" type="ConfirmationDialog" parent="."]
disable_3d = true
title = "MENU_NEW_GAME"
initial_position = 1
size = Vector2i(364, 125)
always_on_top = true
ok_button_text = "PROMPT_CANCEL"
cancel_button_text = "PROMPT_CREATE"

[node name="LineEditName" type="LineEdit" parent="EnterSaveNameDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 356.0
offset_bottom = 76.0
placeholder_text = "PROMPT_ENTER_NAME"
max_length = 25
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 100

[node name="BackToMenuButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
icon = ExtResource("2_a66yr")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 0

[node name="SavedGamesDisplayer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 15

[node name="NewGameSlot" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer" instance=ExtResource("2_k2tpt")]
layout_mode = 2

[node name="TestPanelSlot" type="Panel" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer"]
custom_minimum_size = Vector2(450, 175)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer/TestPanelSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer/TestPanelSlot/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer/TestPanelSlot/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="SlotNumberTexture" type="TextureRect" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer/TestPanelSlot/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_1xuuy")
expand_mode = 1
stretch_mode = 4

[node name="SlotNumberLabel" type="Label" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer/TestPanelSlot/MarginContainer/VBoxContainer/HBoxContainer/SlotNumberTexture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -13.5
offset_right = 6.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "1"

[node name="SavedTimeLabel" type="Label" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer/TestPanelSlot/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "2024/05/12 00:26"

[node name="RemoveButton" type="Button" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer/TestPanelSlot/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
flat = true
icon_alignment = 2
expand_icon = true

[node name="SaveNameLabel" type="Label" parent="MarginContainer/ScrollContainer/MarginContainer/SavedGamesDisplayer/TestPanelSlot/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "FILENAME"
